@@ -167,9 +167,10 @@ plotHHH4_neweights(x, plotter = boxplot, ...,
     \code{\link{layout.labels}}.}
   \item{sp.layout}{optional list of additional layout items, see
     \code{\link{spplot}}.}
-  \item{gpar.missing}{list of graphical parameters applied to regions
-    with missing random intercepts (i.e., not included in the model).
-    Supplementary regions won't be plotted at all if
+  \item{gpar.missing}{list of graphical parameters for
+    \code{\link{sp.polygons}}, applied to regions
+    with missing random intercepts, i.e., not included in the model.
+    Such extra regions won't be plotted if
     \code{!is.list(gpar.missing)}.}
   \item{plotter}{the (name of a) function used to produce the plot of
     weights (a numeric vector) as a function of neighbourhood order (a
